# emu-mos-6502

./: .travis.yml  ChangeLog.md  README.md  default.nix  emu-mos6502.cabal  stack.yaml
bench/: Main.hs
emu/: Main.hs
src/: Assembler.hs  Cpu.hs  Executor.hs  Instruction.hs
src/Cpu/: Instruction.hs  Register.hs
test/: CpuSpec.hs  ExecutorSpec.hs  Main.hs
test/Cpu/: InstructionSpec.hs  RegisterSpec.hs
