name:                emu-mos6502
version:             0.0.1
synopsis:            A MOS Technologies 6502 CPU emulator.
description:            A MOS Technologies 6502 CPU emulator.
homepage:            https://github.com/wayofthepie/emu-mos6502
bug-reports:         https://github.com/wayofthepie/emu-mos6502/issues
license:             MIT
license-file:        LICENSE
author:              wayofthepie
maintainer:          wayofthepie@gmail.com
category:            Emulator
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
source-repository head
  type:              git
  location:          https://github.com/wayofthepie/haskell-criu-rpc-types

library
  exposed-modules:
    Cpu
  build-depends:
    base >=4.9 && <4.10
  hs-source-dirs:      src

  default-language:    Haskell2010

benchmark bench-emu-mos6502
  type:             exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs: bench
  ghc-options:
    -O2
    -threaded
    -fprof-auto
  build-depends:
    base >= 4.5 && < 5
    , criterion
    , emu-mos6502
  default-language:    Haskell2010
