name:                emu-mos6502
version:             0.0.1
synopsis:            A MOS Technologies 6502 CPU emulator.
description:            A MOS Technologies 6502 CPU emulator.
homepage:            https://github.com/wayofthepie/emu-mos6502
bug-reports:         https://github.com/wayofthepie/emu-mos6502/issues
license:             MIT
license-file:        LICENSE
author:              wayofthepie
maintainer:          wayofthepie@gmail.com
category:            Emulator
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
source-repository head
  type:              git
  location:          https://github.com/wayofthepie/haskell-criu-rpc-types

library
  exposed-modules:
    Cpu
    , Executor
    , Instruction
  build-depends:
    base >=4.9 && <4.10
    , mtl
    , vector
  hs-source-dirs:      src

  default-language:    Haskell2010

test-suite emu-mos6502-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:
    Main.hs
  build-depends:
    base
    , hspec
    , tasty
    , tasty-hunit
    , tasty-hspec
    , tasty-smallcheck
    , tasty-quickcheck
    , emu-mos6502
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


benchmark bench-emu-mos6502
  type:             exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs: bench
  ghc-options:
    -O2
    -threaded
    -fprof-auto
  build-depends:
    base
    , criterion
    , emu-mos6502
  default-language:    Haskell2010
